@startuml
left to right direction
skinparam classAttributeIconSize 0

title Système de gestion de documents – Diagramme de classes

class Utilisateur {
    +id: Integer
    +name: String
    +email: String
    -password: String
    +role: String <<admin, formateur, apprenant>>
    +email_verified_at: DateTime
    +remember_token: String
    +created_at: DateTime
    +updated_at: DateTime
    --
    +isAdmin(): Boolean
    +isFormateur(): Boolean
    +isApprenant(): Boolean
}

class Document {
    +id: Integer
    +title: String
    +description: Text
    +original_name: String
    +file_path: String
    +file_size: Integer
    +mime_type: String
    +type: String
    +status: String <<draft, published, archived, pending, approved, rejected>>
    +is_public: Boolean
    +download_count: Integer
    +user_id: Integer
    +categorie_id: Integer
    +created_at: DateTime
    +updated_at: DateTime
    --
}

class Categorie {
    +id: Integer
    +name: String
    +description: Text
    +created_at: DateTime
    +updated_at: DateTime
    --
}

class Validation {
    +id: Integer
    +document_id: Integer
    +validated_by: Integer
    +status: String <<pending, approved, rejected, blocked>>
    +comments: Text
    +validated_at: DateTime
    +created_at: DateTime
    +updated_at: DateTime
    --
}

' Relationships
Utilisateur "1" -- "0..*" Document : owns
Document "*" -- "1" Categorie : belongs to
Validation "1" -- "1" Document : pertains to
Validation "1" -- "1" Utilisateur : validated by

@enduml
